crates/tsuno-driver/tests/fixtures/snapshots/pass/assert_allows_existential_witness.rs
fn foo() {
    //@ assert ?x == 42usize;
    let _ = ();
}

fn main() {}
